source/blender/editors/screen/screen_ops.c
@@ -3341,11 +3341,14 @@ static bool screen_maximize_area_poll(bContext *C)
   const wmWindow *win = CTX_wm_window(C);
   const bScreen *screen = CTX_wm_screen(C);
   const ScrArea *area = CTX_wm_area(C);
+  const wmWindowManager *wm = CTX_wm_manager(C);
   return ED_operator_areaactive(C) &&
          /* Don't allow maximizing global areas but allow minimizing from them. */
          ((screen->state != SCREENNORMAL) || !ED_area_is_global(area)) &&
          /* Don't change temporary screens. */
-         !WM_window_is_temp_screen(win);
+         !WM_window_is_temp_screen(win) &&
+         /* Don't maximize when dragging. */
+         BLI_listbase_is_empty(&wm->drags);
 }
 
 static void SCREEN_OT_screen_full_area(wmOperatorType *ot)
